docs: Decision Steward role + v0.2 visibility + failure modes

--- a/decisions/contracts/DC-2026-001.yaml
+++ b/decisions/contracts/DC-2026-001.yaml
@@ -22,17 +22,7 @@ assumptions:
 constraints:
   bounded_authority:
     can_write_paths:
-      - "README.md"
-      - "LICENSE"
-      - "docs/"
-      - "decisions/contracts/"
-      - "artifacts/"
-      - ".github/workflows/"
-      - "integrations/github-action/"
-      - "adl/"
-      - "tests/"
-      - "pyproject.toml"
-      - "examples/"
+      - "data/ticks/"
     cannot_touch:
       - ".github/workflows/"
       - "secrets/"
