contracts: add install/demo contract DC-2026-001

--- a/decisions/contracts/DC-2026-001.yaml
+++ b/decisions/contracts/DC-2026-001.yaml
@@ -23,6 +23,7 @@ constraints:
   bounded_authority:
     can_write_paths:
       - "data/ticks/"
+      - "README.md"
     cannot_touch:
       - ".github/workflows/"
       - "secrets/"
