fix the contrat

--- a/decisions/contracts/DC-2026-001.yaml
+++ b/decisions/contracts/DC-2026-001.yaml
@@ -29,6 +29,7 @@ constraints:
       - "scripts/"
       - "decisions/contracts/"
       - "artifacts/"
+      - "README.md"
     cannot_touch:
       - ".github/workflows/"
       - "secrets/"
