--- a/decisions/contracts/DC-REPO-001.yaml
+++ b/decisions/contracts/DC-REPO-001.yaml
@@ -39,6 +39,7 @@ constraints:
       - "README.md"
       - "decisions/contracts/"
       - "artifacts/"
+      - ".gitignore"
     cannot_touch:
       - "secrets/"
       - "trading/"
